# atlas-go-examplex

./: .gitignore  Cargo.toml  README.md  Rocket.toml.default  docker-compose.yml
atlas/local/: schema.hcl
migrations/20160720150332_create_tasks_table/: up.sql
src/: main.rs
