[package]
name = "todo"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = "0.5.1"
diesel = { version = "2.0.0", features = ["mysql", "r2d2"] }
diesel_migrations = "2.0.0"

[dev-dependencies]
parking_lot = "0.12"
rand = "0.8"

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_mysql_pool"]

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]
